yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-service
spec:
  selector:
    app: demo-nginx-app
  ports:
  - port: 8090
    protocol: TCP
    targetPort: 80
